--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -30,7 +30,7 @@
                     <th>列长度</th>
                     <th>列注释</th>
                     <th>属性键类型</th>
-                    <th>是否允许为空</th>
+                    <th>允许为空</th>
                     <th>默认值</th>
                     <th>操作</th>
                 </tr>
