--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -22,7 +22,6 @@
             <table class="table table-bordered">
                 <thead>
                 <tr>
-                    <th><input type="checkbox"></th>
                     <th>列序号</th>
                     <th>表名</th>
                     <th>列名</th>
@@ -32,12 +31,10 @@
                     <th>属性键类型</th>
                     <th>允许为空</th>
                     <th>默认值</th>
-                    <th>操作</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="column,state : ${columns}">
-                    <th><input type="checkbox"></th>
                     <td th:text="${column.ordinalPosition}"></td>
                     <td><span class="badge badge-success py-2" th:text="${column.tableName}"></span></td>
                     <td class="text-left font-weight-bold" th:text="${column.columnName}"></td>
@@ -47,10 +44,14 @@
                     <td th:text="${column.columnKey}"></td>
                     <td th:text="${column.isNullable}"></td>
                     <td th:text="${column.columnDefault}"></td>
-                    <td><button class="btn btn-outline-success text-black-50">生成代码</button></td>
                 </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <a class="btn btn-outline-dark btn-block" href="javascript:;">生成代码</a>
         </div>
     </div>
 </div>
