--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -56,83 +56,7 @@
             <input type="hidden" id="previewUrl" th:value="@{/generate(tableName=${tableName})}">
         </div>
     </div>
-    <div class="row my-5">
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">Bean</div>
-                <div class="card-body text-center">
-                    <button onclick="preview(1)" class="btn btn-primary m-auto">预览</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-
-            <div class="card">
-                <div class="card-header text-center font-weight-bold border-primary">Jpa Bean</div>
-                <div class="card-body text-center">
-                    <button onclick="preview(2)" class="btn btn-primary m-auto">预览</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">Repository</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto" onclick="preview(3)">预览</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">Mapper</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto" onclick="preview(4)">预览</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">Service</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto" onclick="preview(5)">预览</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">MapperImpl</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto" onclick="preview(6)">预览</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">RepositoryImpl</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto" onclick="preview(7)">预览</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold">Controller</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto">预览</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-2">
-            <div class="card">
-                <div class="card-header text-center font-weight-bold border-primary">Dto</div>
-                <div class="card-body text-center">
-                    <a href="javascript:;" class="btn btn-primary m-auto">预览</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="previewContainer"></div>
     <!--模态框-->
     <div class="row">
         <div class="col">
@@ -173,13 +97,6 @@
         hljs.initHighlightingOnLoad();
     });
 
-    /**
-     * 高亮显示代码
-     */
-    function hightLighter() {
-        hljs.highlightBlock($('#codeContainer')[0]);
-    }
-
     var previewObj = {
         'bean': '',
         'jpa': '',
@@ -191,6 +108,33 @@
         'controller': '',
         'dto': ''
     };
+
+    let temp = `<div class="col-2"> <div class="card"> <div class="card-header text-center font-weight-bold">{{0}}</div> <div class="card-body text-center"> <button onclick="preview('{{0}}')" class="btn btn-primary m-auto">预览</button> </div> </div></div>`
+    function generatePreviewBtn(){
+        const rowPrefix  = `<div class="row my-5">`
+        const rowSuffix = `</div>`
+        var result = '';
+        Object.keys(previewObj).forEach((value, index) => {
+            let obj = temp.replace("{{0}}", value);
+            obj = obj.replace("{{0}}", value);
+            if (index === 0) {
+                obj = rowPrefix + obj;
+            }
+            if (index !== 0 && index % 6 === 0) {
+                obj = rowSuffix + rowPrefix + obj;
+            }
+            result += obj;
+        });
+        $('#previewContainer').html(result);
+    }
+    generatePreviewBtn()
+
+    /**
+     * 高亮显示代码
+     */
+    function hightLighter() {
+        hljs.highlightBlock($('#codeContainer')[0]);
+    }
 
     /**
      * 生成代码
@@ -208,6 +152,8 @@
                 previewObj['service'] = escapeHtml(result['service']);
                 previewObj['mapperImpl'] = result['mapperImpl'];
                 previewObj['repositoryImpl'] = result['repositoryImpl'];
+                previewObj['controller'] = result['controller'];
+                previewObj['dto'] = result['dto'];
                 that.removeClass("btn-outline-danger");
                 that.removeClass("text-danger");
                 that.addClass("bg-success");
@@ -217,28 +163,12 @@
         });
     }
 
-
-    /**
-     *  预览的类型
-     */
-    previewType = {
-        1: 'bean',
-        2: 'jpa',
-        3: 'repository',
-        4: 'mapper',
-        5: 'service',
-        6: 'mapperImpl',
-        7: 'repositoryImpl'
-    };
-
     /**
      * 预览生成的代码
      */
     function preview(type) {
-        // 预览类型
-        var previewTypeName = previewType[type];
         // 获取显示的code
-        var previewCode = previewObj[previewTypeName];
+        var previewCode = previewObj[type];
         if (!previewCode) {
             alert('数据初始化失败，请重新生成代码');
             return;
