增加数据库数据类型

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -103,7 +103,7 @@
         'repository': '',
         'mapper': '',
         'service': '',
-        'mapperImpl': '',
+        'serviceImpl': '',
         'repositoryImpl': '',
         'controller': '',
         'dto': ''
@@ -150,7 +150,7 @@
                 previewObj['repository'] = result['repository'];
                 previewObj['mapper'] = result['mapper'];
                 previewObj['service'] = escapeHtml(result['service']);
-                previewObj['mapperImpl'] = result['mapperImpl'];
+                previewObj['serviceImpl'] = result['serviceImpl'];
                 previewObj['repositoryImpl'] = result['repositoryImpl'];
                 previewObj['controller'] = result['controller'];
                 previewObj['dto'] = result['dto'];
