增加数据库数据类型

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -150,7 +150,7 @@
                 previewObj['jpa'] = result['jpa'];
                 previewObj['repository'] = result['repository'];
                 previewObj['mapper'] = result['mapper'];
-                previewObj['service'] = result(result['service']);
+                previewObj['service'] = result['service'];
                 previewObj['serviceImpl'] = result['serviceImpl'];
                 previewObj['repositoryImpl'] = result['repositoryImpl'];
                 previewObj['controller'] = result['controller'];
