代码生成器2.0  自定义配置

--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -72,7 +72,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text letter-space-zero-5">包名</span>
                     </div>
-                    <input type="text" class="form-control col-form-label-lg font-weight-bold" name="packageName" placeholder="请输入包名字">
+                    <input type="text" class="form-control col-form-label-lg font-weight-bold" name="packageName" placeholder="请输入包名，例 cn.okjava.bennycodegenerator.generator.note">
                 </div>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
