--- a/src/main/resources/templates/column.html
+++ b/src/main/resources/templates/column.html
@@ -108,7 +108,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">开启Lombok</span>
                     </div>
-                    <select class="form-control font-weight-bold col-form-label-lg" name="lombokFlag">
+                    <select class="form-control font-weight-bold col-form-label" name="lombokFlag">
                         <option value="true" selected>开启</option>
                         <option value="false">关闭</option>
                     </select>
